[package]
name = "ltp-rs"
version = "0.1.0"
authors = ["ylfeng <ylfeng@ir.hit.edu.cn>"]
edition = "2018"

[dependencies]
tokenizers = "0.10"
itertools = "0.10"
thiserror = "1.0"
num-traits = "0.2"
lazy_static = "1.4"
onnxruntime = { git = "https://github.com/marshallpierce/onnxruntime-rs.git", branch = "mp/dyn-out-type" }
# FOR VOCAB
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
coreml = []
cuda = []
