[package]
name = "ltp4cpp"
version = "0.1.0"
authors = ["ylfeng <ylfeng@ir.hit.edu.cn>"]
edition = "2018"

[lib]
name = "ltp"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
ltp-rs = { version = '0.1.0', path = '../../ltp-rs' }

[build-dependencies]
cxx-build = "1.0"

[features]
default = []
cuda = ["ltp-rs/cuda"]